@@ -1,14 +1,11 @@
 /* vim: set ts=4 sw=4 wm=5 : */
 
-/* This example demonstrates detaching and reattaching GtkSpell.
- * Also, we try using German instead of English. */
+/* This example demonstrates detaching and reattaching GtkSpell. */
 
 #include <gtk/gtk.h>
 #include <gtkspell/gtkspell.h>
 
-const char *langs[] = { "en_US", "de_DE", "ja_JP", NULL };
-
-GtkWidget *window, *languagelist, *attached, *view;
+GtkWidget *window, *attached, *view;
 
 static void
 report_gtkspell_error(const char *err) {
@@ -29,11 +26,7 @@ attach_cb() {
 	GError *error = NULL;
 
 	if (gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(attached))) {
-		int lang;
-
-		lang = gtk_option_menu_get_history(GTK_OPTION_MENU(languagelist));
-
-		spell = gtkspell_new_attach(GTK_TEXT_VIEW(view), langs[lang], &error);
+		spell = gtkspell_new_attach(GTK_TEXT_VIEW(view), NULL, &error);
 
 		if (spell == NULL) {
 			report_gtkspell_error(error->message);
@@ -42,40 +35,6 @@ attach_cb() {
 	} else {
 		gtkspell_detach(gtkspell_get_from_text_view(GTK_TEXT_VIEW(view)));
 	}
-}
-
-static void
-setlang_cb() {
-	GtkSpell *spell;
-	int lang;
-	GError *error = NULL;
-
-	spell = gtkspell_get_from_text_view(GTK_TEXT_VIEW(view));
-	if (spell == NULL)
-		return;
-
-	lang = gtk_option_menu_get_history(GTK_OPTION_MENU(languagelist));
-	if (!gtkspell_set_language(spell, langs[lang], &error)) {
-		report_gtkspell_error(error->message);
-		g_error_free(error);
-	}
-}
-
-static void
-build_languagelist() {
-	int i;
-	GtkWidget *menu, *mi;
-
-	languagelist = gtk_option_menu_new();
-	menu = gtk_menu_new();
-	for (i = 0; langs[i] != NULL; i++) {
-		mi = gtk_menu_item_new_with_label(langs[i]);
-		gtk_widget_show(mi);
-		g_signal_connect(G_OBJECT(mi), "activate",
-				G_CALLBACK(setlang_cb), NULL);
-		gtk_menu_shell_append(GTK_MENU_SHELL(menu), mi);
-	}
-	gtk_option_menu_set_menu(GTK_OPTION_MENU(languagelist), menu);
 }
 
 int
@@ -97,16 +56,12 @@ main(int argc, char* argv[]) {
 			GTK_SHADOW_IN);
 	gtk_container_add(GTK_CONTAINER(scroll), view);
 
-	build_languagelist();
-
 	hbox = gtk_hbox_new(FALSE, 5);
 	attached = gtk_toggle_button_new_with_label("Attached");
 	g_signal_connect(G_OBJECT(attached), "toggled",
 			G_CALLBACK(attach_cb), NULL);
 	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(attached), TRUE);
 	gtk_box_pack_start(GTK_BOX(hbox), attached, FALSE, FALSE, 0);
-
-	gtk_box_pack_end(GTK_BOX(hbox), languagelist, FALSE, FALSE, 0);
 
 	box = gtk_vbox_new(FALSE, 5);
 	gtk_box_pack_start(GTK_BOX(box), scroll, TRUE, TRUE, 0);
